# dota-picker

./: .gitignore  manage.py  pyproject.toml  settings.py  streamlit.py  streamlit_app.py
dota_hero_picker/: calculate_matchups.py  data_manager.py  data_preparation.py  development_plan.txt  hero_data_manager.py  load_dota_matches.py  load_personal_matches.py  load_public_matches.py  model_trainer.py  neural_network.py  patch_resolver.py  train_from_tuning.py  train_model.py  training_utils.py  tune_hyperparameters.py  upgrades.txt
dota_hero_picker/constants/: abilities.json  hero_abilities.json  heroes.json  patch.json
dota_hero_picker/matches/: dota_decisions.csv  personal_matches.csv
dota_hero_picker/matchups_statistics/: counters.csv  synergy.csv
version1/: dota2.ipynb  dota_decisions.csv
version2/: load_dota_matches.py  neural_network.py  pyproject.toml  streamlit.py  train_model.py  upgrades.txt
version2/matches/: dota_decisions.csv
